# MLQS

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  config.py  consts.py  labels.py  main.py  schema.py
src/data/: loader.py
src/data/raw/HARD/Kim_hard-2026-06-18_13-07-03/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  HeartRate.csv  Metadata.csv  TotalAcceleration.csv
src/data/raw/HARD/Luka_Hard-2026-06-07_17-25-36/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  HeartRate.csv  Metadata.csv  TotalAcceleration.csv
src/data/raw/HARD/Misha_hard-2026-06-16_10-04-14/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  HeartRate.csv  Manifest.csv  Metadata.csv  TotalAcceleration.csv
src/data/raw/HARD/Noella_Hard-2026-06-17_06-33-29/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  HeartRate.csv  Metadata.csv  (+1 more)
src/features/: augmentation.py  cross_sensor.py  engineering.py  frequency_domain.py  importance.py  selection.py  statistical.py  time_domain.py  windowing.py
src/models/: classical.py  deep.py  evaluation.py
src/notebooks/: 01_eda.py  02_preprocessing.py  03_feature_engineering.py  04_classical_ml.py  05_deep_learning.py
src/pipeline/: builder.py
src/preprocessing/: missing.py  noise.py  resample.py
src/tuning/: __init__.py  config.py  integration.py  objectives.py  search_spaces.py
src/tuning/phase1_pipeline/: best.json
src/utils/: convert.py  viz.py
(+52 files in other folders)
