[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[project]
name = "mlqs"
version = "0.1.0"
description = "ML pipeline for phone/watch sensor data — preprocessing, feature engineering, and model evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "xgboost>=3.2.0",
]
